--- a/index.html
+++ b/index.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Tip calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+  <title> Tip calculator app</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
+  <section class="logo-section">
+    <img class="logo" src="images/logo.svg" alt="logo">
+  </section>
+  <section class="tip-calculator">
+    <section class="left-section">
+      <p class="left-heading">Bill</p>
+      <div class="input-box">
+        <img class="input-icon" src="images/icon-dollar.svg" alt="dollar sign">
+        <input type="number" name="Bill" id="bill" placeholder="0">
+      </div>
+      <p class="left-heading">Select Tip %</p>
+      <section id="tip-section" class="tip-section">
+      </section>
+      <p class="left-heading">Number of People</p>
+      <div class="input-box">
+        <img class="input-icon" src="images/icon-person.svg" alt="people sign">
+        <input type="number" name="people" id="people" placeholder="0">
+      </div>
+    </section>
 
-  Bill
+    <section class="right-section">
+      <section>
+        <section class="bill-sub-section">
+          <p class="sub-heading">Tip Amount <span class="span">/ Person</span></p>
+          <p class="money" id="tip">$ 0.0</p>
+        </section>
+        <section class="bill-sub-section">
+          <p class="sub-heading">Total <span class="span">/ Person</span></p>
+          <p class="money" id="total">$ 0.0</p>
+        </section>
+      </section>
+      <button id="reset-btn"> Reset</button>
+    </section>
+  </section>
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+<script src="modules/index.js"></script>
+
 </html>
